--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>websockets</title>
-    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <h1>Hello to websockets</h1>
+
+    <script src="/chat.js"></script>
 </body>
 </html>
