--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,15 @@
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-    <h1>Hello to websockets</h1>
+    <div id="chat-app">
+        <div id="chat-window">
+            <div id="output"></div>
+        </div>
+        <input type="text" id="handle" placeholder="Handle">
+        <input type="text" id="message" placeholder="Message">
+
+        <button id="send">Send</button>
+    </div>
 
     <script src="/chat.js"></script>
 </body>
